When rendering, camera randomly jumps to a different (Z-axis) location. #77954

Closed
opened 2020-06-17 16:31:27 +02:00 by KingKilo · 12 comments

System Information
Operating system: Windows 10 Home - 10.0.18362

NVIDIA GeForce GTX 1080 Ti
Intel(R) Core(TM) i7-7800X CPU @ 3.50GHz
32GB RAM

Blender Version
Broken: 2.83
Worked: newest version of Blender that worked as expected

Short description of error
Trying to render out a particle + physics explosion (fully baked)
Render samples: 192 (also happens on lower samples)

Some frames are skipped completely which is already being discussed in #77922
But now I'm also getting random frames where the camera is way lower, than on other frames.
And it's not just the location of the smoke on the screen, it's physically looking at the bottom of the explosion.
As if the camera is on a different Z axis position.
ExcuseMeWhatNow.png
Note: The camera is not even animated. So shouldn't be moving at all.

Explosion1.blend

**System Information** Operating system: Windows 10 Home - 10.0.18362 NVIDIA GeForce GTX 1080 Ti Intel(R) Core(TM) i7-7800X CPU @ 3.50GHz 32GB RAM **Blender Version** Broken: 2.83 Worked: newest version of Blender that worked as expected **Short description of error** Trying to render out a particle + physics explosion (fully baked) Render samples: 192 *(also happens on lower samples)* Some frames are *skipped completely* which is already being discussed in #77922 But now I'm also getting random frames where the camera is way lower, than on other frames. And it's not just the location of the smoke on the screen, it's physically looking at the bottom of the explosion. As if the camera is on a different Z axis position. ![ExcuseMeWhatNow.png](https://archive.blender.org/developer/F8628019/ExcuseMeWhatNow.png) *Note: The camera is not even animated. So shouldn't be moving at all.* [Explosion1.blend](https://archive.blender.org/developer/F8628017/Explosion1.blend)
Author

Added subscriber: @KingKilo

Added subscriber: @KingKilo

#77922 was marked as duplicate of this issue

#77922 was marked as duplicate of this issue
Author

Blender Cycles is actually just trolling me right now.
These are all from the same render, no camera movement. Looks great in viewport.
Explosion2_005.png

Explosion2_006.png

Explosion2_010.png

This one I actually stopped rendering, cause it was taking crazy long.
troll.png

Explosion2_004.png

Explosion2_009.png

I'm at a loss. Cycles does not like particle, gas physics.

Blender Cycles is actually just trolling me right now. These are all from the same render, no camera movement. Looks great in viewport. ![Explosion2_005.png](https://archive.blender.org/developer/F8628779/Explosion2_005.png) ![Explosion2_006.png](https://archive.blender.org/developer/F8628778/Explosion2_006.png) ![Explosion2_010.png](https://archive.blender.org/developer/F8628777/Explosion2_010.png) This one I actually stopped rendering, cause it was taking crazy long. ![troll.png](https://archive.blender.org/developer/F8628776/troll.png) ![Explosion2_004.png](https://archive.blender.org/developer/F8628775/Explosion2_004.png) ![Explosion2_009.png](https://archive.blender.org/developer/F8628774/Explosion2_009.png) I'm at a loss. Cycles *does not* like particle, gas physics.

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Can you go to location where blender.exe file is located, run blender_debug_log.cmd, start rendering, exit blender, upload created files here and tell us which frames were erratic?

Can you go to location where blender.exe file is located, run `blender_debug_log.cmd`, start rendering, exit blender, upload created files here and tell us which frames were erratic?

#77967 (eevee volumetrics renders glitchly) sounds a bit similar

#77967 (eevee volumetrics renders glitchly) sounds a bit similar
Author

@iss
I've let it render for 12 frames, (frame 9 till 20) when Blender simply quit on itself. (crashed)

Explosion1_009 - supposed to be empty - CORRECT
Explosion1_010 - Rendered smoke / fire but on the wrong location. (Z-axis) - WRONG
Explosion1_011 - CORRECT
All frames after that (Explosion1_012 till Explosion1_020) are empty - WRONG

blender_system_info.txt

blender_debug_output.txt

I can always render again if you want, to see if I can replicate the weird scaling.

@iss I've let it render for 12 frames, (frame 9 till 20) when Blender simply quit on itself. (crashed) Explosion1_009 - supposed to be empty - **CORRECT** Explosion1_010 - Rendered smoke / fire but on the wrong location. (Z-axis) - **WRONG** Explosion1_011 - **CORRECT** All frames after that (*Explosion1_012* till *Explosion1_020*) are empty - **WRONG** [blender_system_info.txt](https://archive.blender.org/developer/F8636623/blender_system_info.txt) [blender_debug_output.txt](https://archive.blender.org/developer/F8636622/blender_debug_output.txt) I can always render again if you want, to see if I can replicate the weird scaling.
Author

Update -

Without changing anything in the .blend file provide above or the file from #77977, Blender 2.82 is running this without any issues.
Camera does not jump to a different position, nor are my images weirdly sized.

Definitely a 2.83 thing.

Update - Without changing anything in the .blend file provide above or the file from #77977, Blender 2.82 is running this without any issues. Camera does not jump to a different position, nor are my images weirdly sized. Definitely a 2.83 thing.

Added subscribers: @sebbas, @lichtwerk

Added subscribers: @sebbas, @lichtwerk

Changed status from 'Needs User Info' to: 'Resolved'

Changed status from 'Needs User Info' to: 'Resolved'
Richard Antalik self-assigned this 2020-10-12 20:30:30 +02:00

I have looked at this issue again, I managed to optimize file that it is testable in reasonable time.

I was able to reproduce in 2.83.0, but not in later LTS version 2.83.5. Unfortunately 2.90 has problem where particles doesn't produce smoke.

Please download latest LTS version where this should be resolved https://www.blender.org/download/lts/

If problems persists please open new report.

I have looked at this issue again, I managed to optimize file that it is testable in reasonable time. I was able to reproduce in 2.83.0, but not in later LTS version 2.83.5. Unfortunately 2.90 has problem where particles doesn't produce smoke. Please download latest LTS version where this should be resolved https://www.blender.org/download/lts/ If problems persists please open new report.
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#77954
No description provided.