Fix random crash in Cycles smoke volume loading

Don't access evaluated mesh data after freeing Blender depsgraph.

Potentially related to T77954.